--- a/ENTREGA 3/FRONTEND/index.html
+++ b/ENTREGA 3/FRONTEND/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/app.png" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -12,7 +12,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 
-    <title>GPI Project</title>
+    <title>ChileXperience</title>
   </head>
   <body>
     <div id="root"></div>
